# steamos_dual_boot_installer_patch

./: .gitignore  Cargo.toml  Dockerfile.dev  README.md  build.rs  run.sh
.github/workflows/: build-publish.yml
src/: discovery.rs  launcher.rs  main.rs  plan.rs
ui/: app.slint
