[package]
name = "steamos-installer-wizard"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "=1.17.0", default-features = false, features = ["std", "backend-winit", "renderer-software", "compat-1-2"] }

[build-dependencies]
slint-build = "=1.17.0"
